# pdf-tile-viewer

./: .gitignore  LICENSE  README.md  package.json
.github/workflows/: release.yml  rust.yml
.github/workflows/artifact-assets/: notes.txt
.github/workflows/scripts/: make-release-asset.sh
artifacts/: readme.txt
docs/: README.md
src/: App.svelte  app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  pdf.rs
src-tauri/src/internal/: file.rs  tauri.rs
src-tauri/src/utils/: app_window.rs  file.rs  mod.rs  pdf.rs  user_settings.rs
src/components/: AppViewer.svelte  Dashboard.svelte  DocumentViewer.svelte  Loader.svelte  PDFViewerExample.svelte  PageViewer.svelte  PagesViewer.svelte  Toast.svelte  Tooltip.svelte
src/components/@common/: Tooltip.svelte
src/components/Dashboard/: @Layout.svelte  FileSelect.svelte  Header.svelte  Layout.svelte  LoadedHistory.svelte
src/components/DocumentViewer/: @Layout.svelte  @types.ts  Header.svelte  Layout.svelte  PageViewer.svelte  PagesTileViewer.svelte  PagesTileViewerAside.svelte  Search.svelte  ZoomedPageViewer.svelte
src/layouts/: App.svelte  AppViewer.svelte  DragDrop.svelte  Loader.svelte  Toast.svelte
src/pages/Dashboard/: @Layout.svelte  FileSelect.svelte  Header.svelte  LoadedHistory.svelte
src/routes/: +layout.svelte  +page.svelte
src/stores/: loadedHistory.ts  toast.ts
src/types/: loadedHistory.ts  toast.ts
src/utils/: backend.ts  event.ts  file.ts  pdf.ts  route.ts  settings.ts
(+26 files in other folders)
