[package]
name = "pdf-tile-viewer"
version = "1.0.0"
description = "PDF Tile Viewer - app bundle and backend"
authors = ["nabbisen"]
edition = "2021"

categories = ["gui", "visualization", "value-formatting", "text-processing"]
keywords = ["pdf", "gui", "text", "graphics"]
rust-version = "1.78.0"

license-file = "../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pdf_tile_viewer_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = ["devtools"] }
tauri-plugin-shell = "2.0.0-rc"
tauri-plugin-dialog = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

